align issues buttons

--- a/client/urquieta_client/src/components/routes/routes.css
+++ b/client/urquieta_client/src/components/routes/routes.css
@@ -6,6 +6,11 @@
     font-family: 'Exo-Regular';
     src: url('../../assets/fonts/Exo-Regular.otf'); 
   }
+  @font-face {
+    font-family: 'Angelina-Demo';
+    src: url('../../assets/fonts/Angelina_Demo.ttf'); 
+  }
+
 
 .ear {
     border-top-width: 10px;
@@ -500,17 +505,18 @@
 }
 
 .issues-btntxt1 {
-    margin-left: -475px;
+    margin-left: -600px;
     margin-top: -75px;
 }
 
 .issues-btntxt2 {
-    margin-left: 170px;
+    margin-left: 32px;
     margin-top: -103px;
 }
 
 .bullet-section {
     margin-top: 100px;
+    margin-left: 130px;
 }
 
 .issues-blt1,
@@ -603,6 +609,33 @@
     font-size: 45px;
     height: 100px;
     font-weight: bolder;
+}
+
+.issues-1st-btn {
+  width: 575px;
+  height: 210px;
+  z-index: 1;
+  position: absolute;
+  margin-left: 30px;
+}
+
+.issues-nocost {
+  font-family: 'Angelina-Demo', sans-serif !important;
+    color: #245d8e;
+    font-size: 300px;
+    margin-top: -100px !important;
+    margin-bottom: -250px !important;
+}
+
+.issues-exam-txt {
+  font-family: 'Exo-Regular', sans-serif;
+    margin-left: 231px;
+    color: white;
+    font-weight: bold;
+    font-size: 35px;
+    position: absolute;
+    z-index: 1;
+    margin-top: 92px;
 }
 
 .issues-btn3 {
